--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -16,6 +16,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/editText" android:layout_weight="1" android:layout_span="3"
+                    android:inputType="numberDecimal"
                     />
         </TableRow>
         <TableRow
