--- a/app/src/main/res/layout-land/main.xml
+++ b/app/src/main/res/layout-land/main.xml
@@ -9,9 +9,10 @@
                 tools:context=".MainActivity">
 
     <LinearLayout
-            android:orientation="vertical"
+            android:orientation="horizontal"
             android:layout_width="fill_parent"
-            android:layout_height="fill_parent" android:layout_alignParentStart="false">
+            android:layout_height="fill_parent">
+
         <TableLayout
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent">
