--- a/app/src/main/res/layout-land-v14/main.xml
+++ b/app/src/main/res/layout-land-v14/main.xml
@@ -1,37 +1,29 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 xmlns:tools="http://schemas.android.com/tools"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:paddingLeft="@dimen/activity_horizontal_margin"
                 android:paddingRight="@dimen/activity_horizontal_margin"
                 android:paddingTop="@dimen/activity_vertical_margin"
                 android:paddingBottom="@dimen/activity_vertical_margin"
-                tools:context=".MainActivity" android:gravity="bottom">
-
-    <LinearLayout
-            android:orientation="vertical"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content" android:layout_alignParentStart="false"
-            >
+                tools:context=".MainActivity">
+    <GridLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true" android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" android:gravity="bottom">
         <TableLayout
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent">
 
-            <TableRow
-                    android:layout_width="fill_parent"
-                    android:layout_height="fill_parent">
-            </TableRow>
-            <TableRow
-                    android:layout_width="fill_parent"
-                    android:layout_height="fill_parent">
+            <TableRow android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1">
                 <EditText
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:id="@+id/editText"
+                        android:id="@+id/editText" android:layout_weight="1" android:layout_span="3"
                         android:inputType="numberDecimal"
-                        android:layout_span="4"/>
-            </TableRow>
-            <TableRow android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1">
+                        />
             </TableRow>
             <TableRow
                     android:layout_width="fill_parent"
@@ -40,48 +32,48 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="1"
-                        android:id="@+id/b1" android:layout_weight="1" android:layout_column="1"/>
+                        android:id="@+id/b1" android:layout_weight="1"/>
                 <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="2"
-                        android:id="@+id/b2" android:layout_weight="1" android:layout_column="2"/>
+                        android:id="@+id/b2" android:layout_weight="1"/>
                 <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="3"
-                        android:id="@+id/b3" android:layout_weight="1" android:layout_column="3"/>
+                        android:id="@+id/b3" android:layout_weight="1"/>
             </TableRow>
             <TableRow
                     android:layout_width="fill_parent"
                     android:layout_height="fill_parent">
                 <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="4"
-                        android:id="@+id/b4" android:layout_weight="1" android:layout_column="1"/>
+                        android:id="@+id/b4" android:layout_weight="1"/>
                 <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="5"
-                        android:id="@+id/b5" android:layout_weight="1" android:layout_column="2"/>
+                        android:id="@+id/b5" android:layout_weight="1"/>
                 <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="6"
-                        android:id="@+id/b6" android:layout_weight="1" android:layout_column="3"/>
+                        android:id="@+id/b6" android:layout_weight="1"/>
             </TableRow>
             <TableRow
                     android:layout_width="fill_parent"
                     android:layout_height="fill_parent">
                 <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="7"
-                        android:id="@+id/b7" android:layout_weight="1" android:layout_column="1"/>
+                        android:id="@+id/b7" android:layout_weight="1"/>
                 <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="8"
-                        android:id="@+id/b8" android:layout_weight="1" android:layout_column="2"/>
+                        android:id="@+id/b8" android:layout_weight="1"/>
                 <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="9"
-                        android:id="@+id/b9" android:layout_weight="1" android:layout_column="3"/>
+                        android:id="@+id/b9" android:layout_weight="1"/>
             </TableRow>
             <TableRow
                     android:layout_width="fill_parent"
                     android:layout_height="fill_parent">
                 <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="-"
-                        android:id="@+id/bMinus" android:layout_weight="2" android:layout_column="1"/>
+                        android:id="@+id/bMinus" android:layout_weight="2"/>
                 <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="0"
-                        android:id="@+id/b0" android:layout_weight="1" android:layout_column="2"/>
+                        android:id="@+id/b0" android:layout_weight="1"/>
                 <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="+"
-                        android:id="@+id/bPluc" android:layout_weight="2" android:layout_column="3"/>
+                        android:id="@+id/bPluc" android:layout_weight="2"/>
             </TableRow>
             <TableRow
                     android:layout_width="fill_parent"
                     android:layout_height="fill_parent">
                 <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="="
-                        android:id="@+id/bResult" android:layout_weight="1" android:layout_column="1"/>
+                        android:id="@+id/bResult" android:layout_weight="1"/>
             </TableRow>
         </TableLayout>
-    </LinearLayout>
+    </GridLayout>
 </RelativeLayout>
