--- a/app/src/main/res/layout-land/main.xml
+++ b/app/src/main/res/layout-land/main.xml
@@ -1,33 +1,25 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:paddingLeft="@dimen/activity_horizontal_margin"
-                android:paddingRight="@dimen/activity_horizontal_margin"
-                android:paddingTop="@dimen/activity_vertical_margin"
-                android:paddingBottom="@dimen/activity_vertical_margin"
-                tools:context=".MainActivity">
+                android:layout_height="fill_parent"
+                android:orientation="vertical" android:gravity="bottom">
 
+    <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/editText"/>
     <LinearLayout
-            android:orientation="horizontal"
+            android:orientation="vertical"
             android:layout_width="fill_parent"
-            android:layout_height="fill_parent">
-
+            android:layout_height="wrap_content">
         <TableLayout
                 android:layout_width="fill_parent"
-                android:layout_height="fill_parent">
+                android:layout_height="wrap_content"
+                android:layout_weight="1" android:paddingBottom="10dp" android:paddingLeft="5dp"
+                android:paddingRight="5dp">
 
-            <TableRow android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1">
-                <EditText
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:id="@+id/editText" android:layout_weight="1" android:layout_span="3"
-                        android:inputType="numberDecimal"
-                        />
-            </TableRow>
             <TableRow
                     android:layout_width="fill_parent"
-                    android:layout_height="fill_parent">
+                    android:layout_height="wrap_content">
                 <Button
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -40,7 +32,7 @@
             </TableRow>
             <TableRow
                     android:layout_width="fill_parent"
-                    android:layout_height="fill_parent">
+                    android:layout_height="wrap_content">
                 <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="4"
                         android:id="@+id/b4" android:layout_weight="1"/>
                 <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="5"
@@ -50,7 +42,7 @@
             </TableRow>
             <TableRow
                     android:layout_width="fill_parent"
-                    android:layout_height="fill_parent">
+                    android:layout_height="wrap_content">
                 <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="7"
                         android:id="@+id/b7" android:layout_weight="1"/>
                 <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="8"
@@ -60,7 +52,7 @@
             </TableRow>
             <TableRow
                     android:layout_width="fill_parent"
-                    android:layout_height="fill_parent">
+                    android:layout_height="wrap_content">
                 <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="-"
                         android:id="@+id/bMinus" android:layout_weight="2"/>
                 <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="0"
@@ -70,10 +62,11 @@
             </TableRow>
             <TableRow
                     android:layout_width="fill_parent"
-                    android:layout_height="fill_parent">
+                    android:layout_height="wrap_content">
                 <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="="
                         android:id="@+id/bResult" android:layout_weight="1"/>
             </TableRow>
         </TableLayout>
     </LinearLayout>
-</RelativeLayout>
+
+</LinearLayout>
